Start adjusting Section to Chapter globally

--- a/latex/ch1.tex
+++ b/latex/ch1.tex
@@ -2,7 +2,7 @@
 \begin{document}
 
 \section{Introduction}
-\label{sec:intro}
+\label{ch:intro}
 
 The study of acoustic signals forms the core of many fields including sonar, seismology, audio, music, and speech. Acoustic signals are functions of time, representing the evolving amplitude of the sound pressure wave \parencite{melbook}. Another way to characterize acoustic signals is by their frequency components, which can be computed from the Fourier Transform \parencite{melbook}.
 
@@ -37,7 +37,7 @@ Figure \ref{fig:stfttradeoff} shows a musical glockenspiel signal analyzed with 
 
 \textcite{dictionary} note that the first use of the STFT was by \textcite{gabor1946} to analyze a speech signal, which used fixed-size Gaussian windows. This was called the Gabor transform, and is now considered a special case of the STFT \parencite{dictionary}.
 
-The Constant-Q Transform \hlblu{(CQT)} was originally proposed by \textcite{jbrown} to analyze musical signals with a logarithmic frequency scale to better show the relationship between the fundamental frequency of a musical instrument and its harmonics. The resulting transform used long-duration windows in the low frequency regions and short-duration windows in the high frequency regions. The visual comparison of the original Constant-Q Transform and the Fourier Transform is shown in Figure \ref{fig:violin}. From the use of short windows in the high frequency regions, the CQT demonstrates good time resolution \parencite{cqtransient} in the region of transients and broadband signals, which are important for timbre and instrument identification \parencite{timbretransients1, timbretransients2}.
+The Constant-Q Transform (CQT) was originally proposed by \textcite{jbrown} to analyze musical signals with a logarithmic frequency scale to better show the relationship between the fundamental frequency of a musical instrument and its harmonics. The resulting transform used long-duration windows in the low frequency regions and short-duration windows in the high frequency regions. The visual comparison of the original Constant-Q Transform and the Fourier Transform is shown in Figure \ref{fig:violin}. From the use of short windows in the high frequency regions, the CQT demonstrates good time resolution \parencite{cqtransient} in the region of transients and broadband signals, which are important for timbre and instrument identification \parencite{timbretransients1, timbretransients2}.
 
 \begin{figure}[ht]
 	\centering
@@ -58,22 +58,22 @@ Building on the Gabor transform (or STFT), and using the Constant-Q Transform as
 
 \subsection{Thesis objectives and related work}
 
-\hlblu{STFT-based music demixing techniques may be limited by the fixed time-frequency resolution of the STFT. The objective of this thesis is to replace the STFT in a music demixing model with the sliCQT, which has a varying time-frequency resolution. Open-Unmix} \parencite{umx} \hlblu{is a state-of-the-art deep neural network for music demixing based on the STFT, with an open-source reference implementation}.\footnote{\url{https://github.com/sigsep/open-unmix-pytorch}} \hlblu{The goal of this thesis is to adapt Open-Unmix to create a usable music demixing software application based on the sliCQT.}
+STFT-based music demixing techniques may be limited by the fixed time-frequency resolution of the STFT. The objective of this thesis is to replace the STFT in a music demixing model with the sliCQT, which has a varying time-frequency resolution. Open-Unmix \parencite{umx} is a state-of-the-art deep neural network for music demixing based on the STFT, with an open-source reference implementation.\footnote{\url{https://github.com/sigsep/open-unmix-pytorch}} The goal of this thesis is to adapt Open-Unmix to create a usable music demixing software application based on the sliCQT.
 
 Several music demixing papers \parencite{fitzgerald1, driedger, tftradeoff1, tftradeoff2} describe the use of different window sizes of the STFT to improve source separation performance. By contrast, using the NSGT instead of the STFT may be of interest, as it is a single transform which can replace the need to explicitly trade-off of time and frequency resolution.
 
 Other music demixing systems have been proposed that use the CQT instead of the STFT \parencite{fitzgerald2, cqtseparation, bettermusicsep}. However, these papers used implementations of the CQT which lacked a stable inverse \parencite{lackinverse}, and for which different approximate inversion schemes have been proposed \parencite{klapuricqt, fitzgeraldcqt}. The NSGT is a generalization of the CQT, and can be used to construct a CQT with perfect inverse, or CQ-NSGT \parencite{invertiblecqt, variableq1}.
 
-The sliCQ Transform (sliCQT), whose name means \textit{sliced Constant-Q transform}, was introduced by \textcite{slicq} to compute the NSGT on slices of the audio signal instead of the entire signal, allowing realtime processing. The NSGT and sliCQT can in practice be constructed with any frequency scale that is monotonically increasing, and can use frequency scales that are appropriate for the \hlblu{task, for example}, musical or psychoacoustic scales. Additionally, the NSGT and sliCQT have open-source reference implementations in MATLAB\footnote{\url{http://ltfat.org/doc/filterbank/cqt_code.html}} and Python,\footnote{\url{https://github.com/grrrr/nsgt}} allowing for reproducibility and further research.
+The sliCQ Transform (sliCQT), whose name means \textit{sliced Constant-Q transform}, was introduced by \textcite{slicq} to compute the NSGT on slices of the audio signal instead of the entire signal, allowing realtime processing. The NSGT and sliCQT can in practice be constructed with any frequency scale that is monotonically increasing, and can use frequency scales that are appropriate for the task, for example, musical or psychoacoustic scales. Additionally, the NSGT and sliCQT have open-source reference implementations in MATLAB\footnote{\url{http://ltfat.org/doc/filterbank/cqt_code.html}} and Python,\footnote{\url{https://github.com/grrrr/nsgt}} allowing for reproducibility and further research.
 
 \subsection{Contribution and results}
 
 My first contribution in this thesis is the adaptation of the reference Python NSGT and sliCQT library\footnote{\url{https://github.com/grrrr/nsgt}} to use PyTorch,\footnote{\url{https://pytorch.org}} a modern deep learning framework with graphical processing unit (GPU) support. This allows the NSGT and sliCQT to be computed on the GPU, which, due to its capabilities for parallel computing, is the preferred device on which to train deep neural networks \parencite{pytorch}. The resulting library, which I released as open-source software,\footnote{\url{https://github.com/sevagh/nsgt}} allows future researchers to use the NSGT and sliCQT in any GPU-based machine learning or deep learning model.
 
-My second contribution in this thesis is the adaptation of Open-Unmix, a deep neural network for music demixing\footnote{\url{https://github.com/sigsep/open-unmix-pytorch}} \parencite{umx}, to replace the \hlblu{STFT with the sliCQT}. Ideas were also incorporated from CrossNet-Open-Unmix \parencite{xumx}, which is a variant of Open-Unmix, and the Convolutional Denoising Autoencoder \parencite{plumbley1}, a different deep neural network for music demixing. The final result, named xumx-sliCQ,\footnote{\url{https://github.com/sevagh/xumx-sliCQ/tree/main}} is a neural network \hlblu{that} performs the task of music demixing using the sliCQT.
+My second contribution in this thesis is the adaptation of Open-Unmix, a deep neural network for music demixing\footnote{\url{https://github.com/sigsep/open-unmix-pytorch}} \parencite{umx}, to replace the STFT with the sliCQT. Ideas were also incorporated from CrossNet-Open-Unmix \parencite{xumx}, which is a variant of Open-Unmix, and the Convolutional Denoising Autoencoder \parencite{plumbley1}, a different deep neural network for music demixing. The final result, named xumx-sliCQ,\footnote{\url{https://github.com/sevagh/xumx-sliCQ/tree/main}} is a neural network that performs the task of music demixing using the sliCQT.
 
 \subsection{Outline}
 
-This thesis is organized as follows. In \hlblu{Chapter} \ref{sec:background}, I will cover the background of acoustic signals, frequency analysis, and the important transforms in this thesis including the Fourier Transform, STFT, CQT, NSGT, and sliCQT. I will also present an overview of machine learning for audio and music signals, an introduction to software and Python code concepts, and a survey of music source separation and music demixing. In Chapter \ref{sec:methodology}, I will describe the methodology for the two objectives of the thesis, which are the PyTorch adaptation of the NSGT/sliCQT library, and the replacement of the STFT with the sliCQT inside Open-Unmix. In Chapter \ref{sec:experiment}, I will show and discuss the experimental results, and in Chapter \ref{sec:conclusion} I will conclude the thesis.
+This thesis is organized as follows. In Chapter \ref{ch:background}, I will cover the background of acoustic signals, frequency analysis, and the important transforms in this thesis including the Fourier Transform, STFT, CQT, NSGT, and sliCQT. I will also present an overview of machine learning for audio and music signals, an introduction to software and Python code concepts, and a survey of music source separation and music demixing. In Chapter \ref{ch:methodology}, I will describe the methodology for the two objectives of the thesis, which are the PyTorch adaptation of the NSGT/sliCQT library, and the replacement of the STFT with the sliCQT inside Open-Unmix. In Chapter \ref{ch:experiment}, I will show and discuss the experimental results, and in Chapter \ref{ch:conclusion} I will conclude the thesis.
 
 \end{document}
