--- a/latex/ch2.tex
+++ b/latex/ch2.tex
@@ -596,7 +596,7 @@ In machine learning, the input data is typically split into a training set and a
 
 Music signals are a form of acoustic signal, and the domain of music signal processing is inseparable from the larger field of signal processing \parencite{musicsp}. It follows that ML and DL techniques can be extended to music signal processing applications. \textcite{audiodeeplearning} describe contemporary deep learning architectures that are used for audio applications. They state that models from the field of computer vision, originally designed for 2D images where pixels are related spatially, may not exactly fit audio waveforms, where amplitude values are related temporally. However, convolutional neural networks, recurrent neural networks, and sequence-to-sequence models are three popular types of network architecture that have been adapted with varying levels of success to the audio and music domains \parencite{audiodeeplearning}.
 
-A new music source separation model, which is the result of this thesis, will be presented in Section \ref{sec:methodology}. It will have two variants, one based on a convolutional neural network (CNN) architecture, and one based on a recurrent neural network (RNN) architecture. To provide the necessary background, I will give an overview of convolutional neural networks (CNN) for audio and music applications in Section \ref{sec:cnn}, I will give an overview of recurrent neural networks (RNN) for audio and music applications in Section \ref{sec:rnn}.
+A new music source separation model, which is the result of this thesis, will be presented in Chapter \ref{ch:methodology}. It will have two variants, one based on a convolutional neural network (CNN) architecture, and one based on a recurrent neural network (RNN) architecture. To provide the necessary background, I will give an overview of convolutional neural networks (CNN) for audio and music applications in Section \ref{sec:cnn}, I will give an overview of recurrent neural networks (RNN) for audio and music applications in Section \ref{sec:rnn}.
 
 \subsubsection{Convolutional neural networks (CNN)}
 \label{sec:cnn}
@@ -689,7 +689,7 @@ Figure \ref{fig:rnndiags} shows some example RNN architectures, as well as an il
 \subsection{Software and code concepts}
 \label{sec:softcode}
 
-In this section, I will give an overview of important concepts in Python and general software and coding. The overview will cover the topics that are relevant to the methodology and experiments of this thesis in Section \ref{sec:methodology} and Section \ref{sec:experiment} respectively.
+In this section, I will give an overview of important concepts in Python and general software and coding. The overview will cover the topics that are relevant to the methodology and experiments of this thesis in Chapter \ref{ch:methodology} and Chapter \ref{ch:experiment} respectively.
 
 In Section \ref{sec:pythonbasics}, I will describe concepts of the Python programming language that are most relevant to this thesis, including data structures, numerical and scientific libraries, library managers for installing academic software, and random number generation.
 
@@ -780,7 +780,7 @@ Pip is installed by default with Python, but Conda needs to be installed separat
 \subsubsection{Version control systems and git}
 \label{sec:gitvcs}
 
-Version control systems (VCS) are systems used for tracking and managing changes to code files, and storing the history of changes in a database \parencite{gitbook}. \citeauthor{gitbook} state that the benefits of using a VCS is that it ``allows you to revert selected files back to a previous state, revert the entire project back to a previous state, compare changes over time, see who last modified something that might be causing a problem, who introduced an issue and when, and more. Using a VCS also generally means that if you [make mistakes] or lose files, you can easily recover'' \parencite[1]{gitbook}.
+Version control systems (VCS) are systems used for tracking and managing changes to code files, and storing the history of changes in a database \parencite{gitbook}. \citeauthor{gitbook} state that the benefits of using a VCS is that it ``allows you to revert selected files back to a previous state, revert the entire project back to a previous state, compare changes over time, see who last modified something that might be causing a problem, who introduced an issue and when, and more. Using a VCS also generally means that if you screw things up or lose files, you can easily recover'' \parencite[1]{gitbook}.
 
 According to \textcite{gitbook}, version control systems are either centralized or distributed. In a distributed version control systems (DVCS), each person's copy of the code contains the full history of changes. This means that people can work on their own private copy of the code, and then sync changes with a central server, rather than depending on the central server for viewing the history like in a centralized version control system (CVCS). This allows people to work independently of the central server, until they are ready to sync changes back with the other collaborators.
 
@@ -801,7 +801,7 @@ All of the code for this thesis were stored in Git repositories to keep track of
 
 \citeauthor{floss} state that ``free and open source software (FOSS) is any computer program released under a licence that grants users rights to run the program for any purpose, to study it, to modify it, and to redistribute it in original or modified form'' \parencite[1]{floss}. Free and open-source software is a merging of two distinct ideas: free software\footnote{\url{https://www.fsf.org/}} and open-source software.\footnote{\url{https://opensource.org/}} While these have nuanced differences when it comes to commercial licensing, code visibility, and availability, in simplistic terms FOSS implies code that is free and open for users to read and modify. Releasing code as open-source is becoming more popular in academia, with initiatives like Papers With Code\footnote{\url{https://paperswithcode.com/}} and the Journal of Open Source Software.\footnote{\url{https://joss.theoj.org/}} According to \textcite{floss}, FOSS software is a natural complement to academic publications, given concerns with reproducibility of results.
 
-GitHub\footnote{\url{https://github.com}} is a social website, designed for sharing and browsing software projects that use Git for version control, intended for users to share and collaborate on open-source code. \citeauthor{gitbook} describe GitHub\footnote{\url{https://github.com/}} as ``the single largest host for Git repositories, and [... a] central point of collaboration for millions of developers and projects'' \parencite[131]{gitbook}. GitHub contains tools for working with Git repositories, including social elements for personal profiles or organizations. Open-source projects can be made public on GitHub such that anybody can read and download the source code. For a project hosted on GitHub, there is a file browser built into the website which allows one to view the code and change history of a project. In this thesis, the GitHub code browser will be linked wherever appropriate. An example of the GitHub code browser showing a file from the PyTorch project's Git repository\footnote{\url{https://github.com/pytorch/pytorch}} is shown in Figure \ref{fig:githubpytorch}.
+GitHub\footnote{\url{https://github.com}} is a social website, designed for sharing and browsing software projects that use Git for version control, intended for users to share and collaborate on open-source code. \citeauthor{gitbook} describe GitHub\footnote{\url{https://github.com/}} as ``the single largest host for Git repositories, and [... a] central point of collaboration for millions of developers and projects'' \parencite[131]{gitbook}. GitHub contains tools for working with Git repositories, including social elements for personal profiles or organizations. Open-source projects can be made public on GitHub such that anybody can read and download the source code. For a project hosted on GitHub, there is a file browser built into the website, which allows one to view the code and change history of a project. In this thesis, the GitHub code browser will be linked wherever appropriate. An example of the GitHub code browser showing a file from the PyTorch project's Git repository\footnote{\url{https://github.com/pytorch/pytorch}} is shown in Figure \ref{fig:githubpytorch}.
 
 \begin{figure}[ht]
 	\centering
@@ -817,11 +817,9 @@ GitHub\footnote{\url{https://github.com}} is a social website, designed for shar
 
 In this section, I will provide an overview of music source separation and music demixing. I will start by providing definitions, motivations, and uses of the tasks in Section \ref{sec:musicsepdefsmotivations}. In Section \ref{sec:musicsepbackground}, I will give an overview of historical computational approaches to general audio source separation, leading to current trends in music source separation and demixing. In Section \ref{sec:musicsepdatasets}, I will describe the MUSDB18 and MUSDB18-HQ datasets used for music source separation research, and in Section \ref{sec:evalbss}, I will describe the BSS evaluation metrics used for evaluating music source separation methods.
 
-In Section \ref{sec:masksandoracles}, I will describe the technique of time-frequency masking, which is a popular strategy used for spectrogram-based music source separation, and oracle estimators, which are methods for estimating the upper limit of quality achievable by time-frequency masking. In Section \ref{sec:noisyphaseoracle}, I will describe the noisy phase strategy, which is a strategy used by spectrogram-based music source separation models, where only the model only estimates the magnitude STFT of the target and uses the phase of the original mixed audio, or the ``noisy phase.'' In Section \ref{sec:hpss}, I will describe Harmonic/Percussive Source Separation (HPSS), which is a simple algorithm for music source separation based on the STFT spectrogram that exemplifies the time-frequency tradeoff of the STFT. 
+In Section \ref{sec:masksandoracles}, I will describe the technique of time-frequency masking, which is a popular strategy used for spectrogram-based music source separation, and oracle estimators, which are methods for estimating the upper limit of quality achievable by time-frequency masking. In Section \ref{sec:noisyphaseoracle}, I will describe the noisy phase strategy, which is a strategy used by spectrogram-based music source separation models, where the model only estimates the magnitude STFT of the target and uses the phase STFT of the original mixed audio, or the ``noisy phase.'' In Section \ref{sec:hpss}, I will describe Harmonic/Percussive Source Separation (HPSS), which is a simple algorithm for music source separation based on the STFT spectrogram that exemplifies the time-frequency tradeoff of the STFT. 
 
-A new music source separation model, which is the result of this thesis, will be presented in Section \ref{sec:methodology}. In Section \ref{sec:ml}, I described that the model will have two variants, one based on a convolutional neural network (CNN) architecture, and one based on a recurrent neural network (RNN) architecture. The RNN model architecture is based on Open-Unmix and CrossNet-Open-Unmix, two related models for music source separation, which will be shown in Section \ref{sec:umx} and Section \ref{sec:xumx}. The CNN model architecture is based on the Convolutional Denoising Autoencoder (CDAE), which will be shown in Section \ref{sec:cdae}.
-
-I would like to express gratitude to the SigSep organization\footnote{\url{https://github.com/sigsep}} on GitHub, which houses open-source code projects for music source separation research \parencite{umx}. The projects were essential to the creation of this thesis, and they include the reference implementation of Open-Unmix,\footnote{\url{https://github.com/sigsep/open-unmix-pytorch}}, libraries for loading the MUSDB18-HQ dataset,\footnote{\url{https://github.com/sigsep/sigsep-mus-db}} and a library for computing the BSS evaluation metrics for evaluating music source separation systems.\footnote{\url{https://github.com/sigsep/sigsep-mus-eval}}
+A new music source separation model, which is the result of this thesis, will be presented in Chapter \ref{ch:methodology}. In Section \ref{sec:ml}, I described that the model will have two variants, one based on a convolutional neural network (CNN) architecture, and one based on a recurrent neural network (RNN) architecture. The RNN model architecture is based on Open-Unmix and CrossNet-Open-Unmix, two related models for music source separation, which will be respectively shown in Section \ref{sec:umx} and Section \ref{sec:xumx}. The CNN model architecture is based on the Convolutional Denoising Autoencoder (CDAE), which will be shown in Section \ref{sec:cdae}.
 
 \subsubsection{Task definition and motivations}
 \label{sec:musicsepdefsmotivations}
@@ -833,9 +831,9 @@ According to \citeauthor{mdx21}, audio source separation and music source separa
 	Audio source separation has been studied extensively for decades as it brings benefits in our daily life, driven by many practical applications, e.g., hearing aids, speech diarization, etc. In particular, music source separation (MSS) attracts professional creators because it allows the remixing or reviving of songs to a level never achieved with conventional approaches such as equalizers. Suppressing vocals in songs can also improve the experience of a karaoke application, where people can enjoy singing together on top of the original song (where the vocals were suppressed), instead of relying on content developed specifically for karaoke applications \parencite[1]{mdx21}.
 \end{quote}
 
-A common idea in survey papers is that the domains of speech enhancement and music source separation are both important subproblems of audio source separation of \parencite{musicsepintro1, musicmask}.
+A common idea in survey papers is that the domains of speech enhancement and music source separation are both important subproblems of audio source separation \parencite{musicsepintro1, musicmask}.
 
-I provided definitions for music source separation and music demixing in Section \ref{sec:intro}, to distinguish them from the more general problem of audio source separation:
+I provided definitions for music source separation and music demixing in Chapter \ref{ch:intro}, to distinguish them from the more general problem of audio source separation:
 
 \begin{quote}
 Music source separation is the task of extracting an estimate of one or more isolated sources or instruments (for example, drums or vocals) from musical audio. The task of music demixing or unmixing considers the case where the musical audio is separated into an estimate of all of its constituent sources that can be summed back to the original mixture.
@@ -894,7 +892,7 @@ Techniques more specific to music were developed as a necessity to deal with the
 \label{fig:sepgood}
 \end{figure}
 
-Kernel Additive Modeling (KAM) is the simplest form of music source modeling \parencite{musicsepgood}. To estimate a music source at a given time-frequency point, KAM ``select[s] a set of time-frequency bins, which, given the nature of the target source (e.g., percussive, harmonic or vocals) are likely to be similar in value. This set of time-frequency bins is termed a proximity kernel'' \parencite[36]{musicsepgood}. A well-known example of a KAM-based music separation algorithm is the median-filtering Harmonic/Percussive Source Separation (HPSS) algorithm \parencite{fitzgerald1}.
+Kernel Additive Modeling (KAM) is the simplest form of music source modeling \parencite{musicsepgood}. To estimate a music source at a given time-frequency point, KAM ``select[s] a set of time-frequency bins, which, given the nature of the target source (e.g., percussive, harmonic, or vocals) are likely to be similar in value. This set of time-frequency bins is termed a proximity kernel'' \parencite[36]{musicsepgood}. A well-known example of a KAM-based music separation algorithm is the median-filtering Harmonic/Percussive Source Separation (HPSS) algorithm \parencite{fitzgerald1}.
 
 Spectrogram factorization models are more sophisticated than KAM, and the most popular spectrogram factorization model is Nonnegative Matrix Factorization (NMF) \parencite{musicmask, musicsepgood}. According to \citeauthor{musicsepgood}, NMF ``attempts to factorize a given nonnegative matrix into two nonnegative matrices,'' and it can be applied to the magnitude spectrogram of the mix, $M$, to separate it into frequency weight matrices $W$ and time activation matrices $H$ \parencite[37]{musicsepgood}. A survey on NMF techniques by \textcite{nmfpaper} covers the algorithm in more detail. Most recently, data-driven approaches based on machine learning and deep learning have significantly surpassed past approaches \parencite{musicsepgood, sisec2018}. Figure \ref{fig:spectraldemix} shows different techniques for spectral demixing.
 
@@ -1032,12 +1030,12 @@ In this section, I mentioned that discarding the phase of the complex STFT and a
        \end{minipage}
 \end{figure}
 
-Systems that only estimate the magnitude STFT of a source need a phase STFT to create a complex STFT which can be inverted back to a time-domain waveform. In demixing and source separation literature, there is a strategy called ``noisy phase'' \parencite{noisyphase1, noisyphase2}, where the estimated magnitude STFT of the source is combined with the phase STFT of the original mixed (or noisy) audio. The ``noisy phase'' strategy will be described in further detail in Section \ref{sec:noisyphaseoracle}.
+Systems that only estimate the magnitude STFT of a source need a phase STFT to create a complex STFT, which can be inverted back to a time-domain waveform. In demixing and source separation literature, there is a strategy called ``noisy phase'' \parencite{noisyphase1, noisyphase2}, where the estimated magnitude STFT of the source is combined with the phase STFT of the original mixed (or noisy) audio. The ``noisy phase'' strategy will be described in further detail next.
 
 \subsubsection{Noisy phase or mix-phase inversion (MPI)}
 \label{sec:noisyphaseoracle}
 
-In this section, I will describe the ``noisy phase'' strategy in music source separation, which is the strategy of estimating only the magnitude STFT of the source, and using the phase of the original mixed (or noisy) audio. I will also show the design of an oracle estimator for the ``noisy phase'' strategy to estimate its upper limit of quality. This is important for understanding the upper limit of performance of Open-Unmix \parencite{umx}, a model for music source separation that will be described in Section \ref{sec:umx}, and that forms the base of the new model proposed by this thesis in Section \ref{sec:methodology}.
+In this section, I will describe the ``noisy phase'' strategy in music source separation, which is the strategy of estimating only the magnitude STFT of the source, and using the phase of the original mixed (or noisy) audio. I will also show the design of an oracle estimator for the ``noisy phase'' strategy to estimate its upper limit of quality. This is important for understanding the upper limit of performance of Open-Unmix \parencite{umx}, a model for music source separation that will be described in Section \ref{sec:umx}, and that forms the base of the new model proposed by this thesis in Chapter \ref{ch:methodology}.
 
 The name ``noisy phase'' originates from speech separation, where a common task is to separate speech from noise. In music demixing, referring to interfering musical instruments as ``noise'' is inappropriate, and throughout this section and the rest of this thesis, I will use the term ``mix-phase inversion'' (MPI) to refer to the same idea.
 
@@ -1087,7 +1085,7 @@ The entire process of median-filtering HPSS with binary masks applied to the spe
 
 In this section, I will describe the use of wavelets and wavelet transforms in source separation. Wavelet transforms were designed to overcome the fixed time-frequency resolution of the STFT \parencite{wavelets1, wavelets2}. This relates to the hypothesis of this thesis, which is that the varying time-frequency resolution of the sliCQT might lead to an advantage over the STFT in a music source separation application.
 
-Like the CQT, NSGT, and sliCQT, the wavelet transform uses short windows in the high-frequency regions and long windows in the low-frequency regions, making it more suitable for musical and auditory applications from its nonuniform frequency resolution. As noted in Section \ref{sec:theorynsgt} when introducing the Bark scale, \textcite{barkjust1} used a Bark scale wavelet transform to improve an audio source separation algorithm that was previously based on the STFT:
+Like the CQT, NSGT, and sliCQT, the wavelet transform uses short windows in the high-frequency regions and long windows in the low-frequency regions, making it more suitable for musical and auditory applications from its nonuniform frequency resolution. As noted in Section \ref{sec:theorynsgt} when introducing the Bark scale, \textcite{barkjust1} used a Bark-scale wavelet transform to improve an audio source separation algorithm that was previously based on the STFT:
 
 \begin{quote}
 	Traditionally, short time Fourier transform (STFT) is used in many audio and speech processing applications. Bark-Scaled Wavelet Packet Decomposition (BS-WPD) is a time-frequency signal transformation with non uniform frequency resolution. This transformation reflects the critical bands structure of the human auditory system \parencite[1]{barkjust1}.
@@ -1189,7 +1187,7 @@ Figure \ref{fig:umxes2}(a) shows the training of a single UMX Bi-LSTM network, a
 \subsubsection{CrossNet-Open-Unmix (X-UMX)}
 \label{sec:xumx}
 
-I will now introduce a closely-related variant of Open-Unmix (UMX), called CrossNet-Open-Unmix (X-UMX) \parencite{xumx}. X-UMX improves on the music demixing performance of UMX without introducing any additional parameters in the neural network. Since X-UMX is mostly identical to UMX with better performance, I will be using it as the starting point for the new model that will be proposed by this thesis in Section \ref{sec:methodology}.
+I will now introduce a closely-related variant of Open-Unmix (UMX), called CrossNet-Open-Unmix (X-UMX) \parencite{xumx}. X-UMX improves on the music demixing performance of UMX without introducing any additional parameters in the neural network. Since X-UMX is mostly identical to UMX with better performance, I will be using it as the starting point for the new model that will be proposed by this thesis in Chapter \ref{ch:methodology}.
 
 \textcite{xumx} combined the four separate target networks of UMX into a single model to apply the loss functions and optimizations jointly across all four targets, rather than optimizing each one separately, shown in Figure \ref{fig:umxandxumx}(b). X-UMX also includes loss computed from the time-domain waveforms, in addition to the loss measured from the magnitude spectral coefficients from the original UMX.
 
