--- a/latex/ch0.tex
+++ b/latex/ch0.tex
@@ -1,12 +1,12 @@
 \documentclass[report.tex]{subfiles}
 \begin{document}
 
-%\renewcommand{\abstractname}{Acknowledgement}
-%\begin{abstract}
-%       I would like to take this moment to apologize... to ABSOLUTELY NOBODY!
-%\end{abstract}
-%
-%\newpagefill
+\renewcommand{\abstractname}{Acknowledgement}
+\begin{abstract}
+I would like to express gratitude to the SigSep organization\footnote{\url{https://github.com/sigsep}} on GitHub, which houses open-source code projects for music source separation research \parencite{umx}. The projects were essential to the creation of this thesis, and they include the reference implementation of Open-Unmix,\footnote{\url{https://github.com/sigsep/open-unmix-pytorch}}, libraries for loading the MUSDB18-HQ dataset,\footnote{\url{https://github.com/sigsep/sigsep-mus-db}} and a library for computing the BSS evaluation metrics for evaluating music source separation systems.\footnote{\url{https://github.com/sigsep/sigsep-mus-eval}}
+\end{abstract}
+
+\newpagefill
 
 \renewcommand{\abstractname}{Abstract}
 \begin{abstract}
